# easix

./: .gitignore  Bagno.esx  CLAUDE.md  IDEAS.md  LLL.sh  PLAN.md  index.html  package-lock.json  package.json  planning.md  run.bat  setup.sh  tailwind.config.js  vite.config.ts
.claude/: init.md  settings.local.json
.claude/adr/: 001-tauri-vs-electron.md  002-tera-vs-python-jinja2.md  003-json-files-vs-sqlite.md
.github/workflows/: build-windows-portable.yml  build-windows.yml
docs/: PRD.md  architecture.md  testing-strategy.md
src/: App.tsx  api.ts  index.css  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs
src-tauri/src/commands/: config.rs  deploy.rs  devices.rs  generator.rs  mod.rs  profiles.rs
src-tauri/templates/: provision.ps1.tera  provision.sh.tera
src/components/: Layout.tsx  Select.tsx
src/context/: DevicesContext.tsx
src/pages/: BatchDeploy.tsx  Dashboard.tsx  Deploy.tsx  Devices.tsx  Editor.tsx  Preview.tsx
summary/: backend.md  decisions.md  frontend.md  ssh.md  templates.md
