[package]
name = "easix"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
ssh2 = { version = "0.9", optional = true }
dirs = "5"

[features]
default = []
ssh = ["ssh2"]
